--- a/app/src/main/res/layout/activity_pager_top_bar.xml
+++ b/app/src/main/res/layout/activity_pager_top_bar.xml
@@ -11,7 +11,7 @@
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:background="@drawable/selector_title_click_bg"
-        android:drawableLeft="@drawable/ic_back"
+        android:drawableStart="@drawable/ic_back"
         android:drawablePadding="1dp"
         android:gravity="center"
         android:padding="10dp"
