--- a/app/src/main/res/layout/fragment_polygon_barycenter.xml
+++ b/app/src/main/res/layout/fragment_polygon_barycenter.xml
@@ -11,29 +11,29 @@
     <Button
         android:id="@+id/bt_help"
         android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_alignParentTop="true"
+        android:layout_height="40dp"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="15dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginRight="15dp"
+        android:layout_marginBottom="15dp"
         android:background="@drawable/selector_base_fillet_border_bg"
         android:text="Help" />
 
     <Button
         android:id="@+id/bt_clear"
         android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_height="40dp"
         android:layout_above="@+id/bt_compute"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="15dp"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/selector_base_fillet_border_bg"
         android:text="Clear" />
 
     <Button
         android:id="@+id/bt_compute"
         android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_height="40dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
         android:layout_marginLeft="15dp"
