--- a/app/src/main/res/layout/activity_pager_top_bar.xml
+++ b/app/src/main/res/layout/activity_pager_top_bar.xml
@@ -5,7 +5,7 @@
     android:background="@color/colorPrimary">
 
     <TextView
-        android:id="@+id/tv_left_title"
+        android:id="@+id/tv_left"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
@@ -32,7 +32,7 @@
         android:textSize="20sp" />
 
     <TextView
-        android:id="@+id/tv_right_title"
+        android:id="@+id/tv_right"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentRight="true"
