--- a/app/src/main/res/layout/activity_pager_top_bar.xml
+++ b/app/src/main/res/layout/activity_pager_top_bar.xml
@@ -8,10 +8,10 @@
         android:id="@+id/tv_left"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         android:background="@drawable/selector_title_click_bg"
-        android:drawableLeft="@drawable/ic_back"
+        android:drawableStart="@drawable/ic_back"
         android:drawablePadding="1dp"
         android:gravity="center"
         android:padding="10dp"
@@ -35,7 +35,7 @@
         android:id="@+id/tv_right"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:background="@drawable/selector_title_click_bg"
         android:gravity="center"
