--- a/app/src/main/res/layout/fragment_polygon_barycenter.xml
+++ b/app/src/main/res/layout/fragment_polygon_barycenter.xml
@@ -12,9 +12,9 @@
         android:id="@+id/bt_help"
         android:layout_width="60dp"
         android:layout_height="40dp"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginRight="15dp"
+        android:layout_marginEnd="15dp"
         android:layout_marginBottom="15dp"
         android:background="@drawable/selector_base_fillet_border_bg"
         android:text="Help" />
@@ -24,8 +24,8 @@
         android:layout_width="60dp"
         android:layout_height="40dp"
         android:layout_above="@+id/bt_compute"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="15dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="15dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/selector_base_fillet_border_bg"
         android:text="Clear" />
@@ -34,9 +34,9 @@
         android:id="@+id/bt_compute"
         android:layout_width="60dp"
         android:layout_height="40dp"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp"
         android:layout_marginBottom="15dp"
         android:background="@drawable/selector_base_fillet_border_bg"
         android:text="计算" />
