--- a/app/src/main/res/layout/fragment_sliding_up_panel.xml
+++ b/app/src/main/res/layout/fragment_sliding_up_panel.xml
@@ -28,9 +28,9 @@
                 android:id="@+id/bt_help"
                 android:layout_width="60dp"
                 android:layout_height="40dp"
-                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginRight="15dp"
+                android:layout_marginEnd="15dp"
                 android:layout_marginBottom="15dp"
                 android:background="@drawable/selector_base_fillet_border_bg"
                 android:text="Help" />
@@ -40,8 +40,8 @@
                 android:layout_width="80dp"
                 android:layout_height="40dp"
                 android:layout_above="@+id/bt_compute"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="15dp"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="15dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/selector_base_fillet_border_bg"
                 android:text="Clear" />
@@ -50,9 +50,9 @@
                 android:id="@+id/bt_compute"
                 android:layout_width="80dp"
                 android:layout_height="40dp"
-                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginLeft="15dp"
+                android:layout_marginStart="15dp"
                 android:layout_marginBottom="15dp"
                 android:background="@drawable/selector_base_fillet_border_bg"
                 android:text="计算" />
@@ -83,7 +83,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
-                android:paddingLeft="10dp"
+                android:paddingStart="10dp"
                 android:text="自定义文本，自定义文本，自定义文本，自定义文本，自定义文本，自定义文本，自定义文本，"
                 android:textSize="14sp" />
 
