--- a/app/src/main/res/layout/activity_pager_top_bar.xml
+++ b/app/src/main/res/layout/activity_pager_top_bar.xml
@@ -10,12 +10,10 @@
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:background="@drawable/selector_title_click_bg"
-        android:drawableStart="@drawable/ic_back"
+        android:drawableStart="@drawable/svg_ic_back"
         android:drawablePadding="1dp"
         android:gravity="center"
         android:padding="10dp"
-        android:text="Back"
         android:textColor="#FFFFFF"
         android:textSize="15sp" />
 
@@ -37,7 +35,6 @@
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:background="@drawable/selector_title_click_bg"
         android:gravity="center"
         android:padding="10dp"
         android:text="Right"
